--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE=html>
 <title> Loni Tra </title>
   <head>
-    <<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="index.css" rel = "stylesheet">
     <link rel="icon" type="image/png" href="icon.png">
     <!-- icon from:
