--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="#home" class="tab" ID="nav">H O M E</a>
           <a href="#projects" class="tab" ID ="nav">P R O J E C T S</a>
           <a href="#resume" class="tab" ID ="nav">R E S U M E</a>
-          <a href="#photos" class="tab" ID ="nav">P H O T O S</a>
+          <a href="#photos" class="tab" ID ="nav">P m O T O S</a>
         </div>
       </header>
 
