--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             where I have cultivated a strong sense of belonging & support within this big university and built a strong foundation and understanding of my own learning process.
           </p>
           <p class="abme" ID="projects">
-            This summer, I will be working at Facebook as a <a href ="https://www.facebook.com/careers/FBUEngineering" target="_blank"> Facebook University</a> intern in Menlo Park, California where I will be learning
-            how to build apps on Android, challenging myself both professionally to build an innovative app and personally to step out of my comfort zone, and of course, having tons of fun &#9787;
+            This summer, I will be working at Facebook as a <a href ="https://www.facebook.com/careers/FBUEngineering" target="_blank"> Facebook University for Engineering</a> intern in Menlo Park, California where I will be delving into
+            Android app development, challenging myself both professionally to build an innovative app and personally to step out of my comfort zone, and of course, having tons of fun &#9787;
           </p>
         </main>
 
