--- a/index.html
+++ b/index.html
@@ -304,6 +304,10 @@
 
       </div>
 
+      <footer>
+        Portions of this site &copy; 2019 Loni Tra, other attributions cited in page source
+      </footer>
+
     </body>
   </div>
 </html>
