--- a/index.html
+++ b/index.html
@@ -298,6 +298,24 @@
                   </div>
                 </td>
               </tr>
+              <tr>
+                <td>
+                  <div class="container">
+                    <img class="photos" src="dave.jpg">
+                    <div class="middle">
+                      <div class="text"> An amazing man I was lucky enough to have as a teacher. "What works is work" -Dave Prince </div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="container">
+                    <img class="photos" src="fbinternswag.jpg">
+                    <div class="middle">
+                      <div class="text"> Excited to be an FBU intern! Especially after all the swag I got :) </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
         </table>
 
         <br></br>
