--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </p>
           <p class="abme" ID="projects">
             This summer, I will be working at Facebook as a <a href ="https://www.facebook.com/careers/FBUEngineering" target="_blank"> Facebook University for Engineering</a> intern in Menlo Park, California where I will be delving into
-            Android app development, challenging myself both professionally to build an innovative app and personally to step out of my comfort zone, and of course, having tons of fun &#9787;
+            Android app development, challenging myself both professionally to build an innovative app and personally to step out of my comfort zone, and, of course, having tons of fun &#9787;
           </p>
         </main>
 
