--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                   <div class="container">
                     <img class="photos" src="fbinternswag.jpg">
                     <div class="middle">
-                      <div class="text"> Excited to be an FBU intern! Especially after all the swag I got :) </div>
+                      <div class="text"> Excited to be an FBU intern! Especially after all the FB swag I got :) </div>
                     </div>
                   </div>
                 </td>
