--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <main class ="resume">
           <h2>Loni Tra</h2>
           <p class="resumetop">
-            425-737-0304 • lonitra@uw.edu • <a href="linkedin.com/in/lonitra" target="_blank"> linkedin.com/in/lonitra </a> • <a href="https://github.com/lonitra" target="_blank"> github.com/lonitra </a>
+            425-737-0304 • lonitra@uw.edu • <a href="https://www.linkedin.com/in/lonitra/" target="_blank"> linkedin.com/in/lonitra </a> • <a href="https://github.com/lonitra" target="_blank"> github.com/lonitra </a>
           </p>
 
           <p ID="break"> ___________________________________________________________________________________________________________________________________________ </p>
