--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <main class ="techskills">
           <h3>Technical Skills:</h3>
-          <p class="education"> o	Languages: Python (familiar), JavaScript (familiar), HTML/CSS (familiar), Java (proficient)
+          <p class="education"> o	<strong>Languages:</strong> Python (familiar), JavaScript (familiar), HTML/CSS (familiar), Java (proficient)
           </p>
         </main>
 
@@ -147,7 +147,7 @@
         <main class="techx">
           <h3>Technical Experience:</h3>
           <p class="education">
-            AccessMap, <i> Student Researcher </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
+            <strong>AccessMap,</strong> <i> Student Researcher </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
           </p>
           <p class="eduindent">
             o	Collected, filtered, and visualized longitude/latitude/altitude data using emTripLog app,
@@ -157,7 +157,7 @@
             o	Analyzed GPS data to strategize to improve accuracy of elevation estimates
           </p>
           <p class="education">
-            Google Computer Science Summer Institute, <i> Participant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; July 2017 – August 2017
+            <strong>Google Computer Science Summer Institute,</strong> <i> Participant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; July 2017 – August 2017
           </p>
           <p class="eduindent">
             o	Selected to participate in an intensive programming institute learning web app
@@ -170,7 +170,7 @@
             o	Collaborated with colleagues in order to produce a minimum viable product under a given time constraint
           </p>
           <p class="education">
-            Scratch.mit.edu, <i> User </i>  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2016 – June 2017
+            <strong>Scratch.mit.edu,</strong> <i> User </i>  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2016 – June 2017
           </p>
           <p class = eduindent>
             o	Explored basics programming concepts using MIT’s Scratch website as a class medium by programming and debugging various classroom &emsp;assignments
@@ -217,7 +217,7 @@
         <main class="additionx">
           <h3>Additional Experience:</h3>
           <p class="education">
-            College of Engineering Student Staff, <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
+            <strong>College of Engineering Student Staff,</strong> <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
           </p>
           <p class="eduindent">
             o	Collaborated with three other peers to develop an entire quarter’s worth of curriculum and activities that would best aid incoming freshmen
@@ -229,7 +229,7 @@
             o	Facilitated a classroom of 20 students in studying engineering and its interdisciplinary nature
           </p>
           <p class="education">
-            Key Club/National Honor Society, <i> Member </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2014 – June 2017
+            <strong>Key Club/National Honor Society,</strong> <i> Member </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2014 – June 2017
           </p>
           <p class="eduindent">
             o	Facilitated a safe and comfortable environment for hundreds of children
