--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
           <p ID="break"> ___________________________________________________________________________________________________________________________________________ </p>
 
           <h3> Education: </h3>
-          <p class="education"> University of Washington, Seattle, WA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; GPA: 3.78
+          <p class="education"> University of Washington, Seattle, WA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; GPA: 3.78
           </p>
           <p class="eduindent">
-            Bachelor of Science in Computer Science (Intended) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Expected: June 2022
+            Bachelor of Science in Computer Science (Intended) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;; Expected: June 2022
           </p>
           <ol>
             o	Member of Washington State Academic Redshirts Program (STARS Engineering Program)
@@ -127,7 +127,7 @@
             o	Relevant Coursework: Computer Programming I & II
           </ol>
           <p class="education">
-          Mariner High School, Everett, WA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; June 2017
+          Mariner High School, Everett, WA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; June 2017
           </p>
           <ol>
             o	Relevant Coursework: Introduction to Programming
@@ -147,7 +147,7 @@
         <main class="techx">
           <h3>Technical Experience:</h3>
           <p class="education">
-            <strong>AccessMap,</strong> <i> Student Researcher </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
+            <strong>AccessMap,</strong> <i> Student Researcher </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
           </p>
           <p class="eduindent">
             o	Collected, filtered, and visualized longitude/latitude/altitude data using emTripLog app,
@@ -157,7 +157,7 @@
             o	Analyzed GPS data to strategize to improve accuracy of elevation estimates
           </p>
           <p class="education">
-            <strong>Google Computer Science Summer Institute,</strong> <i> Participant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; July 2017 – August 2017
+            <strong>Google Computer Science Summer Institute,</strong> <i> Participant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; July 2017 – August 2017
           </p>
           <p class="eduindent">
             o	Selected to participate in an intensive programming institute learning web app
@@ -170,7 +170,7 @@
             o	Collaborated with colleagues in order to produce a minimum viable product under a given time constraint
           </p>
           <p class="education">
-            <strong>Scratch.mit.edu,</strong> <i> User </i>  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2016 – June 2017
+            <strong>Scratch.mit.edu,</strong> <i> User </i>  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2016 – June 2017
           </p>
           <p class = eduindent>
             o	Explored basics programming concepts using MIT’s Scratch website as a class medium by programming and debugging various classroom &emsp;assignments
@@ -217,7 +217,7 @@
         <main class="additionx">
           <h3>Additional Experience:</h3>
           <p class="education">
-            <strong>College of Engineering Student Staff,</strong> <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
+            <strong>College of Engineering Student Staff,</strong> <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
           </p>
           <p class="eduindent">
             o	Collaborated with three other peers to develop an entire quarter’s worth of curriculum and activities that would best aid incoming freshmen
@@ -229,7 +229,7 @@
             o	Facilitated a classroom of 20 students in studying engineering and its interdisciplinary nature
           </p>
           <p class="education">
-            <strong>Key Club/National Honor Society,</strong> <i> Member </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2014 – June 2017
+            <strong>Key Club/National Honor Society,</strong> <i> Member </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2014 – June 2017
           </p>
           <p class="eduindent">
             o	Facilitated a safe and comfortable environment for hundreds of children
