--- a/index.html
+++ b/index.html
@@ -100,6 +100,31 @@
         </main>
 
         <br></br>
+
+        <main class="project">
+          <a href="https://github.com/FBUAndroidTeam/HelpQ" target="_blank">
+            <img src="helpq_logo.png" alt="HelpQ" class="projectpics">
+          </a>
+            <section class =projectdescrip>
+            <h2> <a href = "https://github.com/FBUAndroidTeam/HelpQ" target="_blank"> HelpQ</a></h2>
+            <p>
+              HelpQ is an android app I made with my teammates during my Facebook University for
+              Engineering (FBU) internship in the summer of 2019. During the first three weeks
+              of the internship, interns go through a three-week mobile development (either android or iOS) bootcamp with
+              CodePath. During the bootcamp, my teammates
+              (<a href="https://www.linkedin.com/in/cassandra-cabrera-7b7582159/" target="_blank">Cassandra Cabrera</a>
+              &
+              <a href="https://www.linkedin.com/in/julie-kallini-4baa85188/" target="_blank">Julie Kallini</a>)
+              and I were frustrated with the communication system
+              between admininstrators and interns in order to get help. The means of communication was essentially
+              a Google Docs acting as a queue; you could imagine the frustration. We therefore made HelpQ to revamp the
+              CodePath training that FBU Engineering interns experience during the first three weeks of their internships
+              by facilitating smoother communication between interns and administrators.
+            </p>
+          </section>
+        </main>
+
+        <br></br>
         <br></br>
         <br></br>
 
