Updates website to include FBU experience

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE=html>
 <title> Loni Tra </title>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=0.25">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="index.css" rel = "stylesheet">
     <link rel="icon" type="image/png" href="icon.png">
     <!-- icon from:
@@ -101,28 +101,28 @@
 
         <br></br>
 
-        <main class="project">
-          <a href="https://github.com/FBUAndroidTeam/HelpQ" target="_blank">
-            <img src="helpq_logo.png" alt="HelpQ" class="projectpics">
-          </a>
-            <section class =projectdescrip>
-            <h2> <a href = "https://github.com/FBUAndroidTeam/HelpQ" target="_blank"> HelpQ</a></h2>
-            <p>
-              HelpQ is an android app I made with my teammates during my Facebook University for
-              Engineering (FBU) internship in the summer of 2019. During the first three weeks
-              of the internship, interns go through a three-week mobile development (either android or iOS) bootcamp with
-              CodePath. During the bootcamp, my teammates
-              (<a href="https://www.linkedin.com/in/cassandra-cabrera-7b7582159/" target="_blank">Cassandra Cabrera</a>
-              &
-              <a href="https://www.linkedin.com/in/julie-kallini-4baa85188/" target="_blank">Julie Kallini</a>)
-              and I were frustrated with the communication system
-              between admininstrators and interns in order to get help. The means of communication was essentially
-              a Google Docs acting as a queue; you could imagine the frustration. We therefore made HelpQ to revamp the
-              CodePath training that FBU Engineering interns experience during the first three weeks of their internships
-              by facilitating smoother communication between interns and administrators.
-            </p>
-          </section>
-        </main>
+<main class="project">
+  <a href="https://github.com/FBUAndroidTeam/HelpQ" target="_blank">
+    <img src="helpq_logo.png" alt="HelpQ" class="projectpics">
+  </a>
+    <section class =projectdescrip>
+    <h2> <a href = "https://github.com/FBUAndroidTeam/HelpQ" target="_blank"> HelpQ</a></h2>
+    <p>
+      HelpQ is an android app I made with my teammates during my Facebook University for
+      Engineering (FBU) internship in the summer of 2019. During the first three weeks
+      of the internship, interns go through a three-week mobile development (either android or iOS) bootcamp with
+      CodePath. During the bootcamp, my teammates
+      (<a href="https://www.linkedin.com/in/cassandra-cabrera-7b7582159/" target="_blank">Cassandra Cabrera</a>
+      &
+      <a href="https://www.linkedin.com/in/julie-kallini-4baa85188/" target="_blank">Julie Kallini</a>)
+      and I were frustrated with the communication system
+      between admininstrators and interns in order to get help. The means of communication was essentially
+      a Google Docs acting as a queue; you could imagine the frustration. We therefore made HelpQ to revamp the
+      CodePath training that FBU Engineering interns experience during the first three weeks of their internships
+      by facilitating smoother communication between interns and administrators.
+    </p>
+  </section>
+</main>
 
         <br></br>
         <br></br>
@@ -134,7 +134,7 @@
         <main class ="resume">
           <h2>Loni Tra</h2>
           <p class="resumetop">
-            425-737-0304 • lonitra@uw.edu • <a href="https://www.linkedin.com/in/lonitra/" target="_blank"> linkedin.com/in/lonitra </a> • <a href="https://github.com/lonitra" target="_blank"> github.com/lonitra </a>
+            425-737-0304 • lonitra@uw.edu • <a href="https://www.linkedin.com/in/lonitra/" target="_blank"> linkedin.com/in/lonitra </a> • <a href="https://github.com/lonitra" target="_blank"> lonitra.com </a>
           </p>
 
           <p ID="break"> ___________________________________________________________________________________________________________________________________________ </p>
@@ -146,8 +146,14 @@
             Bachelor of Science in Computer Science (Intended) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Expected: June 2022
           </p>
           <ol>
-            o	Member of Washington State Academic Redshirts Program (STARS Engineering Program)
+            o	Washington State Academic Redshirt (STARS) Scholar
           </ol>
+            <ol>
+                &emsp;&emsp;o	Member of highly competitive engineering enrichment program for Washington state students from underserved high &emsp;&emsp;&emsp;schools
+            </ol>
+            <ol>
+                &emsp;&emsp;o	Underwent STARS’s holistic model to build a strong foundation in math and science
+            </ol>
           <ol>
             o	Relevant Coursework: Computer Programming I & II
           </ol>
@@ -163,7 +169,7 @@
 
         <main class ="techskills">
           <h3>Technical Skills:</h3>
-          <p class="education"> o	Languages: Python (familiar), JavaScript (familiar), HTML/CSS (familiar), Java (proficient)
+          <p class="education"> o	<strong>Languages:</strong> Python (familiar), JavaScript (familiar), HTML/CSS (familiar), Java (proficient)
           </p>
         </main>
 
@@ -172,7 +178,19 @@
         <main class="techx">
           <h3>Technical Experience:</h3>
           <p class="education">
-            AccessMap, <i> Student Researcher </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
+            <strong>Facebook University for Engineering,</strong> <i>Intern</i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; June 2019 – August 2019
+          </p>
+          <p class="eduindent">
+            o	Participated in Android mobile development training building four different apps in three weeks, including apps like Twitter and Instagram
+          </p>
+          <p class="eduindent">
+            o	Built own app from scratch in a team of three using Java, Parse, and Android Studio
+          </p>
+          <p class="eduindent">
+            o	Designed features and UI flow that would best resolve issues app aims to solve
+          </p>
+          <p class="education">
+            <strong>AccessMap,</strong> <i> Student Researcher </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
           </p>
           <p class="eduindent">
             o	Collected, filtered, and visualized longitude/latitude/altitude data using emTripLog app,
@@ -182,7 +200,7 @@
             o	Analyzed GPS data to strategize to improve accuracy of elevation estimates
           </p>
           <p class="education">
-            Google Computer Science Summer Institute, <i> Participant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; July 2017 – August 2017
+            <strong>Google Computer Science Summer Institute,</strong> <i> Participant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; July 2017 – August 2017
           </p>
           <p class="eduindent">
             o	Selected to participate in an intensive programming institute learning web app
@@ -195,7 +213,7 @@
             o	Collaborated with colleagues in order to produce a minimum viable product under a given time constraint
           </p>
           <p class="education">
-            Scratch.mit.edu, <i> User </i>  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2016 – June 2017
+            <strong>Scratch.mit.edu,</strong> <i> User </i>  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2016 – June 2017
           </p>
           <p class = eduindent>
             o	Explored basics programming concepts using MIT’s Scratch website as a class medium by programming and debugging various classroom &emsp;assignments
@@ -209,6 +227,19 @@
 
         <main class ="projectlist">
           <h3>Projects:</h3>
+          <p class="education"><strong> HelpQ </strong></p>
+          <p class=eduindent>
+            An Android app that revamps the CodePath training that FBU Engineering interns experience by facilitating 		smoother communication between students and administrators.
+          </p>
+          <p class="eduindent">
+            o	Implemented multiple core features within the app e.g. Create Question
+          </p>
+          <p class="eduindent">
+            o	Designed & updated UI to improve overall UX
+          </p>
+          <p class="eduindent">
+            o	Ran tests to ensure stability of app for presentation and client use
+          </p>
           <p class="education"><strong> HERD </strong></p>
           <p class=eduindent>
             HERD is a web application I made with two other colleagues as a final project for CSSI with a time constraint of a week. HERD offers a visual and a count of people in an area so that traffic can be accounted to manage time effectively.
@@ -242,7 +273,7 @@
         <main class="additionx">
           <h3>Additional Experience:</h3>
           <p class="education">
-            College of Engineering Student Staff, <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
+            <strong>College of Engineering Student Staff,</strong> <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
           </p>
           <p class="eduindent">
             o	Collaborated with three other peers to develop an entire quarter’s worth of curriculum and activities that would best aid incoming freshmen
@@ -254,7 +285,7 @@
             o	Facilitated a classroom of 20 students in studying engineering and its interdisciplinary nature
           </p>
           <p class="education">
-            Key Club/National Honor Society, <i> Member </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2014 – June 2017
+            <strong>Key Club/National Honor Society,</strong> <i> Member </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2014 – June 2017
           </p>
           <p class="eduindent">
             o	Facilitated a safe and comfortable environment for hundreds of children
@@ -336,7 +367,25 @@
                   <div class="container">
                     <img class="photos" src="fbinternswag.jpg">
                     <div class="middle">
-                      <div class="text"> Excited to be an FBU intern! Especially after all the FB swag I got :) </div>
+                      <div class="text"> Excited to be an FBU intern! Especially after all the swag I got :) </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="container">
+                    <img class="photos" src="fbuteam.jpg">
+                    <div class="middle">
+                      <div class="text"> My amazing teammates Julie Kallini & Cassandra Cabrera and my awesome managers Seong Song & Hunter Monk. Really couldn't have asked for a better team! </div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="container">
+                    <img class="photos" src="fbulike.jpg">
+                    <div class="middle">
+                      <div class="text"> An amazing first internship experience, until next summer Facebook! </div>
                     </div>
                   </div>
                 </td>
