--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
         <main class ="resume">
           <h2>Loni Tra</h2>
           <p class="resumetop">
-            425-737-0304 • lonitra@uw.edu • <a href="https://www.linkedin.com/in/lonitra/" target="_blank"> linkedin.com/in/lonitra </a> • <a href="https://github.com/lonitra" target="_blank"> lonitra.com </a>
+            425-737-0304 • lonitra@uw.edu • <a href="https://www.linkedin.com/in/lonitra/" target="_blank"> linkedin.com/in/lonitra </a> • <a href="https://github.com/lonitra" target="_blank"> github.com/lonitra </a>
           </p>
 
           <p ID="break"> ___________________________________________________________________________________________________________________________________________ </p>
 
           <h3> Education: </h3>
-          <p class="education"> University of Washington, Seattle, WA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; GPA: 3.78
+          <p class="education"> University of Washington, Seattle, WA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; GPA: 3.83
           </p>
           <p class="eduindent">
             Bachelor of Science in Computer Science (Intended) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Expected: June 2022
