--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                   <div class="container">
                     <img class="photos" src="fbuteam.jpg">
                     <div class="middle">
-                      <div class="text"> My amazing teammates Julie Kallini & Cassandra Cabrera and my awesome managers Seong Song & Hunter Monk. Really couldn't have asked for a better team! </div>
+                      <div class="text"> My amazing teammates Julie Kallini & Cassandra Cabrera and my awesome managers Seong Wan Song & Hunter Monk. Really couldn't have asked for a better team! </div>
                     </div>
                   </div>
                 </td>
