Updates position of where resume tab takes user

--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
             a MVP of storing user location and alerting users how many HERDERS or users
             were in their area.
           </p>
-          <p ID="resume"></p>
           </section>
         </main>
 
@@ -114,7 +113,7 @@
       CodePath. During the bootcamp, my teammates
       (<a href="https://www.linkedin.com/in/cassandra-cabrera-7b7582159/" target="_blank">Cassandra Cabrera</a>
       &
-      <a href="https://www.linkedin.com/in/julie-kallini-4baa85188/" target="_blank">Julie Kallini</a>)
+      <a ID="resume" href="https://www.linkedin.com/in/julie-kallini-4baa85188/" target="_blank">Julie Kallini</a>)
       and I were frustrated with the communication system
       between admininstrators and interns in order to get help. The means of communication was essentially
       a Google Docs acting as a queue; you could imagine the frustration. We therefore made HelpQ to revamp the
