Includes social media links

--- a/index.html
+++ b/index.html
@@ -33,11 +33,22 @@
             year studying computer science. At the university, I am involved with the <a href ="https://www.engr.washington.edu/stars" target="_blank"> STARS engineering program </a> as a member of cohort V
             where I have cultivated a strong sense of belonging & support within this big university and built a strong foundation and understanding of my own learning process.
           </p>
-          <p class="abme" ID="projects">
+          <p class="abme">
             This summer, I will be working at Facebook as a <a href ="https://www.facebook.com/careers/FBUEngineering" target="_blank"> Facebook University for Engineering</a> intern in Menlo Park, California where I will be delving into
             Android app development, challenging myself both professionally to build an innovative app and personally to step out of my comfort zone, and, of course, having tons of fun &#9787;
           </p>
         </main>
+        
+        <div ID="links">
+          <a href="https://github.com/lonitra" target="_blank">
+            <img src="githublogo.png" class="social" ID="projects">
+            <!-- image from http://pngimg.com/download/73390 -->
+          </a>
+          <a href="https://www.linkedin.com/in/lonitra/" target="_blank">
+            <img src="linkedinlogo.png" class="social" ID="linkedin">
+            <!-- image from https://freebiesupply.com/logos/linkedin-icon-logo/ -->
+          </a>
+        </div>
 
         <br></br>
 
